--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -1,12 +1,11 @@
 .header {
   width: 100%;
-  height: 80px;
+  height: 120px;
   line-height: 80px;
-  background: tan;
 }
 
 .logo img {
-  width: 30%;
+  width: 8rem;
 }
 
 .menu {
@@ -33,7 +32,7 @@
 
 .sticky__header {
   width: 100%;
-  height: 80px;
+  height: 120px;
   line-height: 80px;
   background: #fff;
   position: sticky;
@@ -41,4 +40,5 @@
   left: 0;
   box-shadow: 3px 3px 8px -3px #ddd;
   z-index: 999;
+  opacity: 80%;
 }
