--- a/src/component/Card-carousel/Carousel.css
+++ b/src/component/Card-carousel/Carousel.css
@@ -1,18 +1,19 @@
 .carousel-card {
-  border: 1px solid #ddd;
+  border: 5px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
 img {
-  width: 100%;
-  height: 200px;
+  width: 20px;
+  height: 20px;
   object-fit: cover;
 }
 
 .card-content {
-  padding: 15px;
+  padding: 10px;
+  background: red;
 }
 h3 {
   margin: 0;
@@ -24,8 +25,4 @@ p {
   margin: 10px 0 0;
   font-size: 1rem;
   color: #666;
-}
-
-:hover {
-  transform: scale(1.05);
 }
