develop card-carousel 20%

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -23,13 +23,26 @@ section {
 
 .carousel-card {
   position: relative;
-  width: 100%; /* Sesuaikan lebar sesuai kebutuhan desain Anda */
-  height: 400px; /* Sesuaikan tinggi sesuai kebutuhan desain Anda */
+  width: 100%;
+  height: 400px;
+  gap: 1rem;
 }
 
 .carousel-card img {
   width: 100%;
   height: 100%;
+}
+
+.carousel-container {
+  background: #fff;
+  margin: 0 -10px;
+  box-shadow: 0px 7px 15px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.slider__card {
+  display: flex;
+  gap: 1rem;
 }
 
 .pelayanan__title {
