--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,15 +1,15 @@
 .img__background {
   height: 100%;
   width: 100%;
-  background-size: cover;
+  background-size: auto;
   background-position: center;
   z-index: 1;
 }
 
-.img__background img {
-  height: 100%;
+.img__child img {
   width: 100%;
-  object-fit: cover;
+  height: 100%;
+  object-fit: cover; /* Mengubah object-fit menjadi cover */
 }
 
 section {
@@ -21,6 +21,19 @@ section {
   padding-top: 0%;
 }
 
+.white__bg {
+  background-color: #fff;
+  padding: 1rem 2rem;
+}
+
+.slider__bg {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* ====== carousel card ======= */
 .card-content {
   margin: 1rem;
 }
@@ -30,6 +43,12 @@ section {
   width: 100%;
   height: 400px;
   gap: 1rem;
+  margin: 0 10px;
+}
+
+.carousel-card img,
+.carousel-card .card-content {
+  margin: 10px;
 }
 
 .carousel-card img {
@@ -39,15 +58,12 @@ section {
 
 .carousel-container {
   background: #fff;
-  margin: 0 -10px;
-  box-shadow: 0px 7px 15px -3px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
 }
 
 .slider__card {
   display: flex;
   gap: 1rem;
-  padding: 1.5rem;
+  padding: 2rem;
 }
 
 .pelayanan__title {
