--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,7 +9,7 @@
 .img__child img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Mengubah object-fit menjadi cover */
+  object-fit: cover;
 }
 
 section {
@@ -69,4 +69,11 @@ section {
 .pelayanan__title {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.line {
+  padding: 2rem;
+  margin-right: 45%;
+  margin-left: 45%;
+  border-top: solid 2px var(--primary-color);
 }
