--- a/src/component/Akomodasi/akomodasi.css
+++ b/src/component/Akomodasi/akomodasi.css
@@ -10,6 +10,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: 1;
+}
+
+.h1-background {
+  color: black;
+  font-size: 3rem;
+  position: absolute;
+  z-index: 2;
 }
 
 section {
