--- a/src/component/Konten/konten.css
+++ b/src/component/Konten/konten.css
@@ -7,18 +7,23 @@
 }
 
 .image_konten img {
-  width: 50rem;
-  height: 50rem;
+  width: 45rem;
+  height: 45rem;
   left: 0%;
 }
 
 .desc__konten1 {
-  margin-top: 4rem;
-  margin-right: 4rem;
+  margin-right: 2rem;
 }
 
 .judul__konten1 {
-  font-size: 2.8rem;
+  font-size: 2.2rem;
   font-weight: 500;
   color: var(--primary-color);
+}
+
+.line {
+  padding: 1rem;
+  border-top: solid 2px var(--primary-color);
+  align-items: start;
 }
