--- a/src/component/Akomodasi/akomodasi.css
+++ b/src/component/Akomodasi/akomodasi.css
@@ -14,10 +14,48 @@
 }
 
 .h1-background {
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 3rem;
   position: absolute;
   z-index: 2;
+  top: 50%;
+  transform: translate(40%, -50%);
+}
+
+.h1-background a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.8rem 2rem;
+  background-color: var(--primary-color);
+}
+
+.h1-background p {
+  font-size: 1.2rem;
+}
+
+.h1-backgroundmeet {
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  text-align: center;
+  transform: translate(70%, -50%);
+}
+
+.h1-backgroundmeet p {
+  font-size: 1.2rem;
+}
+
+.h1-backgroundmeet a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.8rem 2rem;
+  background-color: var(--primary-color);
 }
 
 section {
