--- a/src/component/Grid/grid.css
+++ b/src/component/Grid/grid.css
@@ -63,7 +63,15 @@
 
 .line2 {
   padding: 2rem;
+  padding-bottom: 0%;
   margin-right: 45%;
   margin-left: 45%;
+  margin-top: 0%;
+  margin-top: 0%;
   border-top: solid 2px var(--primary-color);
+}
+
+.desc__detail2 {
+  margin-top: 0%;
+  margin-right: 2rem;
 }
