--- a/src/component/GridFasilitas/gridfasilitas.css
+++ b/src/component/GridFasilitas/gridfasilitas.css
@@ -7,9 +7,11 @@
 .img__grid img {
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .desc__grid {
+  margin: auto;
   text-align: center;
   flex: 1;
 }
@@ -22,6 +24,9 @@
 .desc__grid p {
   color: #636363;
   padding: 1rem;
+  margin-right: 12rem;
+  margin-left: 12rem;
+  line-height: 2;
 }
 
 .desc__grid a {
@@ -30,4 +35,23 @@
   font-size: 1rem;
   padding: 0.8rem 2rem;
   background-color: var(--primary-color);
+}
+
+.penawaran {
+  text-align: center;
+  margin-top: 8rem;
+  padding-top: 5rem;
+  padding-bottom: 8rem;
+  background-color: #efefef;
+}
+
+.penawaran h1 {
+  color: var(--primary-color);
+  margin-bottom: 5rem;
+}
+
+.penawaran p {
+  margin-right: 12rem;
+  margin-left: 12rem;
+  line-height: 2;
 }
