--- a/src/component/GridFasilitas/gridfasilitas.css
+++ b/src/component/GridFasilitas/gridfasilitas.css
@@ -42,7 +42,8 @@
   margin-top: 8rem;
   padding-top: 5rem;
   padding-bottom: 8rem;
-  background-color: #efefef;
+  background-color: #f5f5f5;
+  margin-bottom: 5rem;
 }
 
 .penawaran h1 {
