--- a/src/component/LayananBisnis/layananbisnis.css
+++ b/src/component/LayananBisnis/layananbisnis.css
@@ -2,10 +2,12 @@
   display: flex;
   justify-content: center;
   padding: 5rem;
+  justify-content: space-between;
+  margin-right: 8rem;
+  margin-left: 12rem;
 }
 
 .service__bisnis {
-  margin-right: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +37,20 @@
   font-size: 1rem;
   font-weight: 500;
   padding: 0.5rem 2rem;
+}
+
+/* ======== layanan favorit ========= */
+
+.layanan__favorit {
+  /* background-color: #f5f5f5; */
+}
+
+.layanan__favorit h3 {
+  display: flex;
+  justify-content: center;
+}
+
+.content__layanan {
+  display: flex;
+  justify-content: center;
 }
