--- a/src/component/LayananBisnis/layananbisnis.css
+++ b/src/component/LayananBisnis/layananbisnis.css
@@ -53,4 +53,29 @@
 .content__layanan {
   display: flex;
   justify-content: center;
+  margin-right: 8rem;
+  margin-left: 8rem;
+}
+
+.sub__favorite {
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: var(--primary-color);
+}
+
+.desc__favorite {
+  text-align: center;
+  color: #7a7a7a;
+}
+
+.meeting__service {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
